--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,62 +1,110 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2019. Scodeid | yogithesymbian | Yogi Arif Widodo.
+  ~ Android Studio 3.5.1
+  ~ Build #AI-191.8026.42.35.5900203, built on September 26, 2019
+  ~ JRE: 1.8.0_202-release-1483-b49-5587405 amd64
+  ~ JVM: OpenJDK 64-Bit Server VM by JetBrains s.r.o
+  ~ Linux 5.2.0-kali3-amd64
+  -->
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_layout_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:background="@drawable/ic_slider_3"
     tools:context=".ui.auth.RegisterActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/img_logo_login"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_slider_3"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_select_photo"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="32dp"
+        app:icon="@drawable/ic_add_a_photo_black_24dp"
+        app:iconSize="150dp"
+        app:iconTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:targetApi="lollipop" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/select_circle_image"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_select_photo"
+        app:layout_constraintEnd_toEndOf="@+id/btn_select_photo"
+        app:layout_constraintStart_toStartOf="@+id/btn_select_photo"
+        app:layout_constraintTop_toTopOf="@+id/btn_select_photo" />
 
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:cardBackgroundColor="#3C000000"
+        app:cardCornerRadius="8dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_logo_login">
+        app:layout_constraintTop_toBottomOf="@+id/btn_select_photo">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                style="@style/TextAppearance.AppCompat.Body1"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/ip_layout_username"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical|center"
                 android:layout_marginBottom="8dp"
-                android:gravity="center"
-                android:text="@string/activity_register_sign_up"
-                android:textSize="32sp"
-                android:textStyle="bold" />
+                android:textColorHint="@android:color/white"
+                app:hintTextColor="@android:color/white"
+                app:boxStrokeColor="@android:color/white"
+                app:startIconTint="@android:color/white"
+                app:boxStrokeWidth="2dp"
+                app:startIconDrawable="@drawable/ic_account_box_black_24dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/ip_edt_username"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/activity_home_username"
+                    android:textColor="@android:color/white"
+                    android:inputType="text" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/ip_layout_email"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+                android:layout_marginBottom="8dp"
+                android:textColorHint="@android:color/white"
+                app:hintTextColor="@android:color/white"
+                app:boxStrokeColor="@android:color/white"
+                app:startIconTint="@android:color/white"
+                app:boxStrokeWidth="2dp"
+                app:startIconDrawable="@drawable/ic_email_black_24dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ip_edt_email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/activity_register_email"
+                    android:textColor="@android:color/white"
                     android:inputType="textEmailAddress" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -66,34 +114,55 @@
                 android:id="@+id/ip_layout_pass"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:passwordToggleEnabled="true"
+                android:textColorHint="@android:color/white"
+                app:hintTextColor="@android:color/white"
+                app:boxStrokeColor="@android:color/white"
+                app:startIconTint="@android:color/white"
+                app:boxStrokeWidth="2dp"
+                app:startIconDrawable="@drawable/ic_vpn_key_black_24dp">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/ip_edt_pass"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/activity_register_email"
-                    android:inputType="textEmailAddress" />
+                    android:hint="@string/activity_home_password"
+                    android:textColor="@android:color/white"
+                    android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_sign_up"
+                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="16dp"
+                android:gravity="center"
+                android:text="@string/activity_register_sign_up"
+                android:textAlignment="center"
+                android:textAllCaps="false"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/cardView"
+            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
+            app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
+            app:layout_constraintTop_toBottomOf="@+id/btn_select_photo"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.cardview.widget.CardView>
-
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_sign_up"
-        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:text="@string/activity_register_sign_up"
-        android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
